# statsd-cpp

./: .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  LICENSE.md  Makefile  README.md  WORKSPACE  statsd-cpp.pc.in  statsd-cpp.vcxproj  statsd-cpp.vcxproj.filters
.github/: dependabot.yml
.github/workflows/: cmake.yml  codeql-analysis.yml
include/: statsd.hpp  version.hpp.in
src/: statsd.cpp
test/: statsd.cpp
